<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/amountBorrowed"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/editTextHint" />

    <SeekBar
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:max="20"
        android:progress="10"
        android:indeterminate="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/amountBorrowed"
        android:layout_toRightOf="@+id/setRateLabel"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="false"
        android:layout_marginLeft="-30dp"
        />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/setRateLabel"
        android:id="@+id/setRateLabel"
        android:layout_below="@+id/amountBorrowed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_marginTop="25dp"
        android:textSize="@dimen/fontSize"
        android:inputType="numberSigned|numberDecimal"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_alignLeft="@+id/seekBar"
        android:layout_alignStart="@+id/seekBar"
        android:id="@+id/radioGroupLoanTerm">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loanTerm15"
            android:id="@+id/radioButtonLoan15"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loanTerm20"
            android:id="@+id/radioButtonLoan20" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loanTerm30"
            android:id="@+id/radioButtonLoan30" />
    </RadioGroup>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Set Loan Term"
        android:id="@+id/loanTermLabel"
        android:textSize="@dimen/fontSize"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Include Taxes and Insurance"
        android:id="@+id/taxInsuranceCheckBox"
        android:layout_below="@+id/radioGroupLoanTerm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="true"
        android:textSize="@dimen/fontSize"
        android:layout_marginLeft="-8dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculateButton"
        android:id="@+id/calculateButton"
        android:onClick="calculateMortgage"
        android:layout_below="@+id/taxInsuranceCheckBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/monthlyPaymentLabel"
        android:layout_marginTop="55dp"
        android:textSize="@dimen/fontSize"
        android:text="Monthly Payment"
        android:layout_below="@+id/calculateButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/monthlyPayment"
        android:textSize="@dimen/fontSize"
        android:hint="Not Calculated!!"
        android:layout_alignTop="@+id/monthlyPaymentLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seekBarValue"
        android:id="@+id/seekBarLabel"
        android:textSize="@dimen/fontSize"
        android:layout_alignTop="@+id/setRateLabel"
        android:layout_toRightOf="@+id/seekBar"
        android:layout_toEndOf="@+id/seekBar" />
</RelativeLayout>
